--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,12 @@
-#working
+version: '3.3'
+services:
+ app:
+    build: .
+    environment:
+      FLASK_APP: 'App:logistics'
+      ENVIRONMENT: 'production'
+      FLASK_RUN_PORT: '5000'
+      FLASK_RUN_HOST: '0.0.0.0'
+      DEBUG: '0'
+    ports:
+      - '5000:5000'
