--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,62 @@
-argon2-cffi==21.1.0
-attrs==21.2.0
+argon2-cffi==21.3.0
+attrs==21.4.0
 backcall==0.2.0
 bleach==4.1.0
-cffi==1.14.6
-click==8.0.1
+cffi==1.15.0
+click==8.0.3
 colorama==0.4.4
-control==0.9.0
-cycler==0.10.0
-debugpy==1.4.1
-decorator==5.0.9
+control==0.9.1
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.3
-Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
-Flask==2.0.1
-greenlet==1.1.0
-ipykernel==6.3.1
+Flask-WTF==1.0.0
+Flask==2.0.2
+greenlet==1.1.2
+ipykernel==6.6.1
 ipython-genutils==0.2.0
-ipython==7.27.0
-ipywidgets==7.6.4
+ipython==7.31.0
+ipywidgets==7.6.5
 itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter-client==7.0.2
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyter==1.0.0
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.1
-kiwisolver==1.3.1
+jedi==0.18.1
+Jinja2==3.0.3
+jsonschema==4.3.3
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-matplotlib==3.4.2
-mistune==0.8.4
-mpld3==0.5.5
-nbclient==0.5.4
-nbconvert==6.1.0
+mpld3==0.5.7
+nbclient==0.5.9
+nbconvert==6.4.0
 nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.3
-numpy==1.21.1
-packaging==21.0
-pandocfilters==1.4.3
-parso==0.8.2
+nest-asyncio==1.5.4
+notebook==6.4.6
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.3
 pickleshare==0.7.5
-Pillow==8.3.1
-pip==21.2.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-pycparser==2.20
-Pygments==2.10.0
-pyparsing==2.4.7
+Pillow==9.0.0
+pip==21.3.1
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+pycparser==2.21
+Pygments==2.11.2
+pyparsing==3.0.6
 pyrsistent==0.18.0
 python-dateutil==2.8.2
-pywin32==301
-pywinpty==1.1.4
-pyzmq==22.2.1
-qtconsole==5.1.1
-QtPy==1.11.0
-scipy==1.7.0
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.0
+scipy==1.7.3
 Send2Trash==1.8.0
-setuptools==57.4.0
+setuptools==60.5.0
 six==1.16.0
-SQLAlchemy==1.4.22
+SQLAlchemy==1.4.29
 terminado==0.12.1
 testpath==0.5.0
 tornado==6.1
-traitlets==5.1.0
+traitlets==5.1.1
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
+Werkzeug==2.0.2
+widgetsnbextension==3.5.2
